# vectorAI

./: .env.example  .env.frontend.example  .gitignore  COMMANDS.md  Makefile  README.md  docker-compose-dev.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: alembic.ini  main.py
backend/app/agents/: __init__.py  audit_agent.py  base_agent.py  plan_agent.py
backend/app/agents/audit_agent/: agent.py  prompts.py
backend/app/agents/content_agent/: agent.py  prompts.py
backend/app/agents/finishing_agent/: agent.py  prompts.py
backend/app/agents/lesson_agent/: agent.py  prompts.py
backend/app/agents/plan_agent/: agent.py  prompts.py
backend/app/api/v1/: audit.py  auth.py  code.py  courses.py  generate.py  lessons.py  router.py  tasks.py  websocket.py
backend/app/core/: arq.py  broadcast.py  config.py  constants.py  container.py  database.py  dependencies.py  exception_handler.py  exceptions.py  logger.py  logging_middleware.py  service_factory.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 2025_05_24_0935-d3acc0b2e1a1_init.py  2025_05_27_1908-09b46557feaa_add_email_password.py  2025_05_30_1332-74c8ca63e8c8_init.py  2025_05_30_1510-ea078a748db3_session.py  2025_05_31_0831-1fdb516473f8_session_in_course_and_pref.py  2025_05_31_0947-f5ab0c7f4ddc_preference__summary.py  2025_05_31_1019-8584f51fdfa3_оптимизировал_модели_и_связи_с_session.py  2025_05_31_1023-6006ac883cfa_null_preference.py  2025_05_31_2016-e245673f4208_init_refresh_token.py  2025_06_01_1526-b1da72150aac_1000_symb_fix.py  2025_06_01_2005-7fbd77721eb9_lesson_content.py  2025_06_02_1650-c29c25ffc992_add_is_active_and_verified.py  2025_06_03_2148-3d97c411ab35_add_description_and_goals.py  2025_06_05_1525-31476600b67e_tasks.py  2025_06_06_1727-1e1ee49d061c_session_unique.py  (+8 more)
backend/app/models/: __init__.py  base.py  content.py  course.py  task.py
backend/app/schemas/: __init__.py  audit.py  auth.py  course.py  generate.py  session.py  task.py  user.py
backend/app/services/: __init__.py  message_bus.py  redis_cache_service.py
backend/app/utils/: __init__.py  auth_utils.py  email_sender.py  log_helper.py  task_utils.py  uow.py  ws_msg.py
backend/app/workers/: arq_worker.py  audit_tasks.py  content_tasks.py
frontend/: .env.example  (+7 more)
(+90 files in other folders)
